--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  publish = "dist/"
-  command = "ng build --prod"
+  command = "ng build"
+  publish = "dist/fire"
 
 [[redirects]]
   from = "/*"
-  to = "index.html"
+  to = "/index.html"
   status = 200
