--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "fire-ng": "^2.0.1"
   }
 }
